--- a/README
+++ b/README
@@ -1,19 +1,3 @@
-Aug 25, 2012 10:08 pm
-   - Setup an account with phpfog.com. Cloned their php app on to my machine using the help here.
-        http://docs.phpfog.com/getting-started/pf-command-line-tool
-   - Added top.php - last available version from sixserve.net
-   - http://malayalam.phpfogapp.com/top.php shows all undefined and no youtube video :(
-   - Should start fixing this next.
-
-Aug 23, 2012 4:21 pm
-   Q: Is there a way deploy a website directly from github or cloud9 ide?
-   A:  What webframework/language are you using? If you use RoR or Sinatra or any other rake-based framework you can use heroku.com. If your using asp.net you can use appharbor.com, finally if your using php you can use phpfog.com.
-
-       What these hosting providers have in common is that you deploy the website by pushing your code with git, while you won't be deploying directly from github you can just add one of the above mentioned hosts to your remote-list (in addition to github) and then push to that remote when you wish to deploy.
-
-       Another solution would be to add a post-receive-hook to github which then triggers whenever you push to github, in that post-recieve-hook you could tell the webhost to pull from the repo. This does however require you to have git installed on the webserver aswell as some kind of webinterface for the post-recieve-hook to post to.
-
-
 Aug 23, 2012 3:52 pm
    - Realized that malayalam.sixserve.net is gone. They apparently shutdown my space since there was no activity on to that server.
    - Noticed only when I wanted to show it off to Murali Chundi when he was talking about Java and related languages.
@@ -23,6 +7,32 @@ Aug 23, 2012 3:52 pm
    - But this time I want to maintain a CVS like database - For the unknown, CVS is a version control system. something that keeps history of your revisions.
    - github is something that will do this online, helps in collaborative revision control. So if Subin/Vinu wants to make some changes along with me, they can without having to email codes around. And also any previous revisions will be there, so you can also revert back to those if you accidentally mess up the files.
    - Need to figure out a web hosting service that can also use github files directly. 
+
+Aug 23, 2012 4:21 pm
+   Q: Is there a way deploy a website directly from github or cloud9 ide?
+   A:  What webframework/language are you using? If you use RoR or Sinatra or any other rake-based framework you can use heroku.com. If your using asp.net you can use appharbor.com, finally if your using php you can use phpfog.com.
+
+       What these hosting providers have in common is that you deploy the website by pushing your code with git, while you won't be deploying directly from github you can just add one of the above mentioned hosts to your remote-list (in addition to github) and then push to that remote when you wish to deploy.
+
+       Another solution would be to add a post-receive-hook to github which then triggers whenever you push to github, in that post-recieve-hook you could tell the webhost to pull from the repo. This does however require you to have git installed on the webserver aswell as some kind of webinterface for the post-recieve-hook to post to.
+
+Aug 25, 2012 10:08 pm
+   - Setup an account with phpfog.com. Cloned their php app on to my machine using the help here.
+        http://docs.phpfog.com/getting-started/pf-command-line-tool
+   - Added top.php - last available version from sixserve.net
+   - http://malayalam.phpfogapp.com/top.php shows all undefined and no youtube video :(
+   - Should start fixing this next.
+   - To know commit history for a file - use git log filename
+
+Aug 26, 2012 12:44 pm
+   - Setting up local development environment. Usually I would just change the file, commit it and see the changes on malayalam.phpfogapp.com. Apparently it is not the best way to do things!!! 
+   - MAMP will set up a server locally on your laptop, that you can use to see your changes in action.
+   - This video will take you through the setup, and the instructions are also here. Follow both together.
+      - http://css-tricks.com/video-screencasts/86-mamp/
+      - http://docs.phpfog.com/getting-started/development
+   - Simple setup - will get the local file running here. http://localhost:8888/top.php
+   - Wordpress - software used to create beautiful webpages. I have no idea what?
+     
 
 
 
